--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -1139,7 +1139,7 @@
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Diseño para redes sociales
+                            Diseño de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
@@ -1151,7 +1151,7 @@
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Gestión para redes sociales
+                            Gestión de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
