--- a/index.html
+++ b/index.html
@@ -392,107 +392,109 @@
 
           <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-play-btn"></i>
-                  </div>
-                  <h3 class="pe-4">Edición de videos</h3>
-                  <div class="info">
-                    <p>
-                      Especial para creadores de contenido. Ya es hora de impactar
-                      en tus redes sociales.
-                    </p>
-                    <a href="./redes-sociales.html" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-play-btn"></i>
                 </div>
+                <h3 class="pe-4">Edición de videos</h3>
+                <div class="info">
+                  <p>
+                    Especial para creadores de contenido. Ya es hora de impactar
+                    en tus redes sociales.
+                  </p>
+                  <a
+                    href="./redes-sociales.html"
+                    class="readmore stretched-link"
+                    >Read more <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </div>
             </div>
             <!-- End Service Item -->
 
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-laptop"></i>
-                  </div>
-                  <h3 class="pe-4">Diseño web</h3>
-                  <p>
-                    Una página web es esencial para establecer tu presencia en
-                    linea y posicionarte en el mercado.
-                  </p>
-                  <a href="./servicios-web.html" class="readmore stretched-link"
-                    >Read more <i class="bi bi-arrow-right"></i
-                  ></a>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-laptop"></i>
                 </div>
+                <h3 class="pe-4">Diseño web</h3>
+                <p>
+                  Una página web es esencial para establecer tu presencia en
+                  linea y posicionarte en el mercado.
+                </p>
+                <a href="./servicios-web.html" class="readmore stretched-link"
+                  >Read more <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
             <!-- End Service Item -->
 
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-easel"></i>
-                  </div>
-                  <h3 class="pe-4">Identidad visual</h3>
-                  <p>
-                    El diseño que tu marca necesita para reflejar lo que te hace
-                    único.
-                  </p>
-                  <a href="./diseño-grafico.html" class="readmore stretched-link"
-                    >Read more <i class="bi bi-arrow-right"></i
-                  ></a>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-easel"></i>
                 </div>
+                <h3 class="pe-4">Identidad visual</h3>
+                <p>
+                  El diseño que tu marca necesita para reflejar lo que te hace
+                  único.
+                </p>
+                <a href="./diseño-grafico.html" class="readmore stretched-link"
+                  >Read more <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
             <!-- End Service Item -->
 
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-chat-heart"></i>
-                  </div>
-                  <h3 class="pe-4">Copywriter</h3>
-                  <p>
-                    La clave que falta para el éxito de tu empresa. Mensajes
-                    originales y creativos que dejen una chispa en la mente de tus
-                    clientes
-                  </p>
-                  <a href="#" class="readmore stretched-link"
-                    >Read more <i class="bi bi-arrow-right"></i
-                  ></a>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-chat-heart"></i>
                 </div>
+                <h3 class="pe-4">Copywriter</h3>
+                <p>
+                  La clave que falta para el éxito de tu empresa. Mensajes
+                  originales y creativos que dejen una chispa en la mente de tus
+                  clientes
+                </p>
+                <a href="#" class="readmore stretched-link"
+                  >Read more <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
             <!-- End Service Item -->
 
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-wechat"></i>
-                  </div>
-                  <h3 class="pe-4">Redes sociales</h3>
-                  <p>
-                    Potencia, aumenta tu audiencia y crea una comunidad fiel en
-                    redes.
-                  </p>
-                  <a href="./redes-sociales.html" class="readmore stretched-link"
-                    >Read more <i class="bi bi-arrow-right"></i
-                  ></a>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-wechat"></i>
                 </div>
+                <h3 class="pe-4">Redes sociales</h3>
+                <p>
+                  Potencia, aumenta tu audiencia y crea una comunidad fiel en
+                  redes.
+                </p>
+                <a href="./redes-sociales.html" class="readmore stretched-link"
+                  >Read more <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
             <!-- End Service Item -->
 
             <div class="col-lg-4 col-md-6">
-                <div class="service-item position-relative">
-                  <div class="icon">
-                    <i class="bi bi-chat-square-text"></i>
-                  </div>
-                  <h3 class="pe-4">Asesoría y Mentorías</h3>
-                  <p>
-                    Agenda una reunión con Sofi y define el camino de la
-                    comunicación de tu proyecto.
-                  </p>
-                  <a href="#" class="readmore stretched-link"
-                    >Read more <i class="bi bi-arrow-right"></i
-                  ></a>
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-chat-square-text"></i>
                 </div>
+                <h3 class="pe-4">Asesoría y Mentorías</h3>
+                <p>
+                  Agenda una reunión con Sofi y define el camino de la
+                  comunicación de tu proyecto.
+                </p>
+                <a href="#" class="readmore stretched-link"
+                  >Read more <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
             <!-- End Service Item -->
           </div>
@@ -834,7 +836,7 @@
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Diseño para redes sociales
+                            Diseño de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
@@ -846,7 +848,7 @@
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Gestión para redes sociales
+                            Gestión de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
