--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -1028,7 +1028,7 @@
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Diseño para redes sociales
+                            Diseño de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
@@ -1040,7 +1040,7 @@
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Gestión para redes sociales
+                            Gestión de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
