--- a/servicios-web.html
+++ b/servicios-web.html
@@ -958,7 +958,7 @@
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Diseño para redes sociales
+                            Diseño de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
@@ -970,7 +970,7 @@
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Gestión para redes sociales
+                            Gestión de redes sociales
                           </label>
                         </div>
                         <div class="form-check">
