--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
       href="assets/terceros/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.9.0/dist/sweetalert2.min.css"
-      rel="stylesheet"
-    />
     <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore-compat.js"></script>
     <!-- Template Main CSS File -->
@@ -871,7 +867,7 @@
                             type="checkbox"
                             value="Asesorías y Mentorías"
                             name="servicios[]"
-                            id="Servicio4"
+                            id="Servicio7"
                           />
                           <label class="form-check-label" for="Servicio4">
                             Asesorías y Mentorías
@@ -883,7 +879,7 @@
                             type="checkbox"
                             value="Otros"
                             name="servicios[]"
-                            id="Servicio5"
+                            id="Servicio8"
                           />
                           <label class="form-check-label" for="Servicio5">
                             Otros
@@ -1021,7 +1017,7 @@
     <script src="assets/terceros/glightbox/js/glightbox.min.js"></script>
     <script src="assets/terceros/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/terceros/swiper/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.9.0/dist/sweetalert2.all.min.js"></script>
+    <script src="assets/terceros/php-email-form/validate.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <!-- Firebase -->
