--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -1063,7 +1063,7 @@
                             type="checkbox"
                             value="Asesorías y Mentorías"
                             name="servicios[]"
-                            id="Servicio4"
+                            id="Servicio7"
                           />
                           <label class="form-check-label" for="Servicio4">
                             Asesorías y Mentorías
@@ -1075,7 +1075,7 @@
                             type="checkbox"
                             value="Otros"
                             name="servicios[]"
-                            id="Servicio5"
+                            id="Servicio8"
                           />
                           <label class="form-check-label" for="Servicio5">
                             Otros
@@ -1212,6 +1212,7 @@
 <script src="assets/terceros/glightbox/js/glightbox.min.js"></script>
 <script src="assets/terceros/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="assets/terceros/swiper/swiper-bundle.min.js"></script>
+<script src="assets/terceros/php-email-form/validate.js"></script>
 <!-- Template Main JS File -->
 <script src="assets/js/main.js"></script>
   </body>
