--- a/servicios-web.html
+++ b/servicios-web.html
@@ -993,7 +993,7 @@
                             type="checkbox"
                             value="Asesorías y Mentorías"
                             name="servicios[]"
-                            id="Servicio4"
+                            id="Servicio7"
                           />
                           <label class="form-check-label" for="Servicio4">
                             Asesorías y Mentorías
@@ -1005,7 +1005,7 @@
                             type="checkbox"
                             value="Otros"
                             name="servicios[]"
-                            id="Servicio5"
+                            id="Servicio8"
                           />
                           <label class="form-check-label" for="Servicio5">
                             Otros
@@ -1133,6 +1133,7 @@
     <script src="assets/terceros/glightbox/js/glightbox.min.js"></script>
     <script src="assets/terceros/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/terceros/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/terceros/php-email-form/validate.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
   </body>
