--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="info">
                   <p>
                     Especial para creadores de contenido. Ya es hora de impactar
-                    en tus redes sociales.
+                    en tus redes sociales. <br><br>
                   </p>
                   <a
                     href="./redes-sociales.html"
@@ -433,7 +433,7 @@
                 <h3 class="pe-4">Identidad visual</h3>
                 <p>
                   El diseño que tu marca necesita para reflejar lo que te hace
-                  único.
+                  único. <br><br><br>
                 </p>
                 <a href="./diseño-grafico.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -468,7 +468,7 @@
                 <h3 class="pe-4">Redes sociales</h3>
                 <p>
                   Potencia, aumenta tu audiencia y crea una comunidad fiel en
-                  redes.
+                  redes. <br><br><br><br>
                 </p>
                 <a href="./redes-sociales.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -485,7 +485,7 @@
                 <h3 class="pe-4">Asesoría y Mentorías</h3>
                 <p>
                   Agenda una reunión con Sofi y define el camino de la
-                  comunicación de tu proyecto.
+                  comunicación de tu proyecto.<br><br>
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
