arreglo gifs y añado descuentos

--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -292,7 +292,7 @@
 <!-- ======= "Necesitas una web si" section ======= -->
 <section class="container redesSociales d-flex my-5" data-aos="fade-up">
   <div class="row">
-    <div class="redesSociales-video col-lg-6">
+    <div class="redesSociales-video gif col-lg-6">
       <img src="./assets/img/gif's/diseño-grafico.gif" alt="gif de la pelicula 'juego de gemelas'">
     </div>
     <div class="redesSociales-info col-lg-6">
