--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -284,7 +284,7 @@
 <!-- ======= "Necesitas una web si" section ======= -->
 <section class="container redesSociales d-flex my-5" data-aos="fade-up">
   <div class="row">
-    <div class="redesSociales-video col-lg-6">
+    <div class="redesSociales-video gif col-lg-6">
       <img src="./assets/img/gif's/redes-sociales.gif" alt="gif de una chica mirando sus redes">
     </div>
     <div class="redesSociales-info col-lg-6">
@@ -365,6 +365,7 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
+              <img class="descuento" src="./assets/img/servicios/Descuento.png" alt="20% de descuento">
               <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
               <p>
                 Accedes a un precio reducido por algo de mucho valor.
@@ -401,6 +402,7 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
+              <img class="descuento" src="./assets/img/servicios/Descuento.png" alt="20% de descuento">
               <h3 class="pe-4">Manejo de RR.SS Anual</h3>
               <p>
                 Accedé a un descuento abonando el plan Anual.
@@ -438,6 +440,7 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
+              <img class="descuento" src="./assets/img/servicios/Descuento.png" alt="20% de descuento">
               <h3 class="pe-4">Placas para RR.SS Anual</h3>
               <p>
                 Accedé a un descuento abonando el plan Anual.
