--- a/servicios-web.html
+++ b/servicios-web.html
@@ -284,7 +284,7 @@
 <!-- ======= "Necesitas una web si" section ======= -->
 <section class="container redesSociales d-flex my-5" data-aos="fade-up">
   <div class="row">
-    <div class="redesSociales-video col-lg-6">
+    <div class="redesSociales-video gif col-lg-6">
       <img src="./assets/img/gif's/servicios-web.gif" alt="imagen de hearvey specter">
     </div>
     <div class="redesSociales-info col-lg-6">
