cambio de servicios web a diseño web

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -168,7 +168,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-2 pb-0"
-                      href="./servicios-web.html"
+                      href="./diseño-web.html"
                       >Diseño Web</a
                     >
                   </li>
@@ -1156,7 +1156,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Servicios</h4>
             <ul>
-              <li><a href="./servicios-web.html">Diseño web</a></li>
+              <li><a href="./diseño-web.html">Diseño web</a></li>
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
