--- a/diseño-web.html
+++ b/diseño-web.html
@@ -168,7 +168,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-2 pb-0"
-                      href="./servicios-web.html"
+                      href="./diseño-web.html"
                       >Diseño Web</a
                     >
                   </li>
@@ -285,7 +285,7 @@
 <section class="container redesSociales d-flex my-5" data-aos="fade-up">
   <div class="row">
     <div class="redesSociales-video gif col-lg-6">
-      <img src="./assets/img/gif's/servicios-web.gif" alt="imagen de hearvey specter">
+      <img src="./assets/img/gif's/diseño-web.gif" alt="imagen de hearvey specter">
     </div>
     <div class="redesSociales-info col-lg-6">
       <p>Diseño web</p>
@@ -1078,7 +1078,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Servicios</h4>
             <ul>
-              <li><a href="./servicios-web.html">Diseño web</a></li>
+              <li><a href="./diseño-web.html">Diseño web</a></li>
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
