--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-2 pb-0"
-                      href="./servicios-web.html"
+                      href="./diseño-web.html"
                       >Diseño Web</a
                     >
                   </li>
@@ -419,7 +419,7 @@
                   Una página web es esencial para establecer tu presencia en
                   linea y posicionarte en el mercado.
                 </p>
-                <a href="./servicios-web.html" class="readmore stretched-link"
+                <a href="./diseño-web.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -958,7 +958,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Servicios</h4>
             <ul>
-              <li><a href="./servicios-web.html">Diseño web</a></li>
+              <li><a href="./diseño-web.html">Diseño web</a></li>
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
