eliminacion del show en la primer pregunta

--- a/index.html
+++ b/index.html
@@ -440,7 +440,6 @@
         style="margin-bottom: 0px"
       ></div>
       <!-- End Segundo Banner -->
-
       <!-- ======= Testimonios ======= -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
@@ -532,7 +531,7 @@
               </a>
               <div
                 id="faq-list-1"
-                class="collapse show"
+                class="collapse"
                 data-bs-parent=".faq-list"
               >
                 <p class="big-p">
