--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      content="Optimice sus comunicaciones empresariales con nuestra plataforma de gestión de comunicaciones integrada. Ofrecemos soluciones personalizadas para mejorar la eficiencia y la conectividad en su organización. Facilitamos la interacción multicanal y garantizamos una comunicación interna fluida y segura. Descubra cómo nuestra tecnología de vanguardia puede transformar la forma en que su empresa se comunica."
+      content="Somos una agencia orientada a la comunicación de una forma integral, agrupando en un solo lugar lo todo lo que necesitas para que tu proyecto se expanda."
       name="description"
     />
     <meta
-      content="Communication management, Business communication solutions, Integrated messaging platform, Efficient internal communication, Multichannel interaction management, Secure connectivity services, Corporate communication optimization"
+      content="Agencia, marketing,edición de video, Branding, comunicación marcas, diseño gráfico, copywriters, diseño web, redes sociales, estrategia y gestión"
       name="keywords"
     />
     <title>Magnetica</title>
@@ -62,28 +62,9 @@
     <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore-compat.js"></script>
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- -------------------------------------
-                  Santi
-    ------------------------------------- -->
     <link rel="stylesheet" href="./assets/css/mainContact.css" />
-    <!-- -------------------------------------
-                  Santi
-      ------------------------------------- -->
-    <!-- -------------------------------------
-                  Gusti
-    ------------------------------------- -->
     <link rel="stylesheet" href="./assets/css/homemodulo1.css" />
-    <!-- -------------------------------------
-                  Gusti
-    ------------------------------------- -->
-
-    <!-- -------------------------------------
-                  Fabri
-    ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/homeModulo2.css" />
-    <!-- -------------------------------------
-                  Fabri
-    ------------------------------------- -->
   </head>
 
   <body>
@@ -180,7 +161,7 @@
         </div>
         <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
         <div class="icon col-3 d-flex justify-content-end">
-          <a class="rounded-0 m-0" href=""
+          <a class="rounded-0 m-0" href="https://sofiamagnetica.myshopify.com/"
             ><i class="bi bi-cart-fill px-3"></i
           ></a>
           <a class="rounded-0" href=""
@@ -259,7 +240,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-0 pb-2"
-                      href="./copywrite.html"
+                      href="https://sofiamagnetica.myshopify.com/"
                       >Shop express</a
                     >
                   </li>
@@ -385,7 +366,6 @@
               <span class="underline">Nuestros Servicios</span>
             </h1>
           </div>
-          
 
           <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6">
@@ -397,7 +377,7 @@
                 <div class="info">
                   <p>
                     Especial para creadores de contenido. Ya es hora de impactar
-                    en tus redes sociales. <br><br>
+                    en tus redes sociales. <br /><br />
                   </p>
                   <a
                     href="./redes-sociales.html"
@@ -434,7 +414,7 @@
                 <h3 class="pe-4">Identidad visual</h3>
                 <p>
                   El diseño que tu marca necesita para reflejar lo que te hace
-                  único. <br><br><br>
+                  único. <br /><br /><br />
                 </p>
                 <a href="./diseño-grafico.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -454,7 +434,9 @@
                   originales y creativos que dejen una chispa en la mente de tus
                   clientes
                 </p>
-                <a href="#" class="readmore stretched-link"
+                <a
+                  href="https://sofiamagnetica.myshopify.com/products/copywriters?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web"
+                  class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -469,7 +451,7 @@
                 <h3 class="pe-4">Redes sociales</h3>
                 <p>
                   Potencia, aumenta tu audiencia y crea una comunidad fiel en
-                  redes. <br><br><br><br>
+                  redes. <br /><br /><br /><br />
                 </p>
                 <a href="./redes-sociales.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -486,9 +468,12 @@
                 <h3 class="pe-4">Asesoría y Mentorías</h3>
                 <p>
                   Agenda una reunión con Sofi y define el camino de la
-                  comunicación de tu proyecto.<br><br>
+                  comunicación de tu proyecto.<br /><br />
                 </p>
-                <a href="#" class="readmore stretched-link"
+                <a
+                  href="https://wa.me/5493498444635"
+                  target="_blank"
+                  class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -603,11 +588,7 @@
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
-              <div
-                id="faq-list-1"
-                class="collapse"
-                data-bs-parent=".faq-list"
-              >
+              <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
                 <p class="big-p">
                   - Tener todo lo que tu empresa necesita en una sola agencia
                 </p>
@@ -869,7 +850,7 @@
                             name="servicios[]"
                             id="Servicio7"
                           />
-                          <label class="form-check-label" for="Servicio4">
+                          <label class="form-check-label" for="Servicio7">
                             Asesorías y Mentorías
                           </label>
                         </div>
@@ -881,7 +862,7 @@
                             name="servicios[]"
                             id="Servicio8"
                           />
-                          <label class="form-check-label" for="Servicio5">
+                          <label class="form-check-label" for="Servicio8">
                             Otros
                           </label>
                         </div>
@@ -962,7 +943,11 @@
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
-              <li><a href="./shopify">Shop express </a></li>
+              <li>
+                <a href="https://sofiamagnetica.myshopify.com/"
+                  >Shop express
+                </a>
+              </li>
               <li><a href="#contacto">Asesorías</a></li>
             </ul>
           </div>
