--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -61,28 +61,9 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- -------------------------------------
-                  Santi
-    ------------------------------------- -->
     <link rel="stylesheet" href="./assets/css/mainContact.css" />
-    <!-- -------------------------------------
-                  Santi
-      ------------------------------------- -->
-    <!-- -------------------------------------
-                  Módulo 1
-    ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/webmodulo1.css" />
-    <!-- -------------------------------------
-                  Módulo 1
-    ------------------------------------- -->
-
-    <!-- -------------------------------------
-                  Módulo 2
-    ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/webmodulo2.css" />
-    <!-- -------------------------------------
-                  Módulo 2
-    ------------------------------------- -->
   </head>
 
   <body>
@@ -117,7 +98,7 @@
   </div>
   <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
   <div class="icon col-3 d-flex justify-content-end">
-    <a class="rounded-0 m-0" href=""
+    <a class="rounded-0 m-0" href="https://sofiamagnetica.myshopify.com/"
       ><i class="bi bi-cart-fill px-3"></i
     ></a>
     <a class="rounded-0" href=""
@@ -196,7 +177,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-0 pb-2"
-                      href="./copywrite.html"
+                      href="https://sofiamagnetica.myshopify.com/"
                       >Shop express</a
                     >
                   </li>
@@ -379,7 +360,6 @@
           </div>
         </container>
       </div>
-    </div>
   </article>
   <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
     <div class="redesSociales-video col-lg-5">
@@ -418,7 +398,6 @@
           </div>
         </container>
       </div>
-    </div>
   </article>
   <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
     <div class="redesSociales-video col-lg-5">
@@ -456,7 +435,6 @@
           </div>
         </container>
       </div>
-    </div>
   </article>
 </section>
 <!-- ======= End Landing pages section ======= -->
@@ -512,7 +490,6 @@
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  </a>
                 </div>
               </div>
 
@@ -1068,7 +1045,7 @@
                             name="servicios[]"
                             id="Servicio7"
                           />
-                          <label class="form-check-label" for="Servicio4">
+                          <label class="form-check-label" for="Servicio7">
                             Asesorías y Mentorías
                           </label>
                         </div>
@@ -1080,7 +1057,7 @@
                             name="servicios[]"
                             id="Servicio8"
                           />
-                          <label class="form-check-label" for="Servicio5">
+                          <label class="form-check-label" for="Servicio8">
                             Otros
                           </label>
                         </div>
@@ -1160,7 +1137,7 @@
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
-              <li><a href="./shopify">Shop express </a></li>
+              <li><a href="https://sofiamagnetica.myshopify.com/">Shop express </a></li>
               <li><a href="#contacto">Asesorías</a></li>
             </ul>
           </div>
