--- a/sobre-magnetica.html
+++ b/sobre-magnetica.html
@@ -61,13 +61,7 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- -------------------------------------
-                  Santi
-    ------------------------------------- -->
     <link rel="stylesheet" href="./assets/css/mainContact.css" />
-    <!-- -------------------------------------
-                  Santi
-      ------------------------------------- -->
   </head>
 
   <body>
@@ -181,7 +175,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-0 pb-2"
-                      href="./copywrite.html"
+                      href="https://sofiamagnetica.myshopify.com/"
                       >Shop express</a
                     >
                   </li>
@@ -371,7 +365,11 @@
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
-              <li><a href="./shopify">Shop express </a></li>
+              <li>
+                <a href="https://sofiamagnetica.myshopify.com/"
+                  >Shop express
+                </a>
+              </li>
               <li><a href="#contacto">Asesorías</a></li>
             </ul>
           </div>
