--- a/diseño-web.html
+++ b/diseño-web.html
@@ -61,28 +61,9 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- -------------------------------------
-                  Santi
-    ------------------------------------- -->
     <link rel="stylesheet" href="./assets/css/mainContact.css" />
-    <!-- -------------------------------------
-                  Santi
-      ------------------------------------- -->
-    <!-- -------------------------------------
-                  Módulo 1
-    ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/webmodulo1.css" />
-    <!-- -------------------------------------
-                  Módulo 1
-    ------------------------------------- -->
-
-    <!-- -------------------------------------
-                  Módulo 3
-    ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/webmodulo2.css" />
-    <!-- -------------------------------------
-                  Módulo 3
-    ------------------------------------- -->
   </head>
 
   <body>
@@ -117,7 +98,7 @@
         </div>
         <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
         <div class="icon col-3 d-flex justify-content-end">
-          <a class="rounded-0 m-0" href=""
+          <a class="rounded-0 m-0" href="https://sofiamagnetica.myshopify.com/"
             ><i class="bi bi-cart-fill px-3"></i
           ></a>
           <a class="rounded-0" href=""
@@ -196,7 +177,7 @@
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 pt-0 pb-2"
-                      href="./copywrite.html"
+                      href="https://sofiamagnetica.myshopify.com/"
                       >Shop express</a
                     >
                   </li>
@@ -995,7 +976,7 @@
                             name="servicios[]"
                             id="Servicio7"
                           />
-                          <label class="form-check-label" for="Servicio4">
+                          <label class="form-check-label" for="Servicio7">
                             Asesorías y Mentorías
                           </label>
                         </div>
@@ -1007,7 +988,7 @@
                             name="servicios[]"
                             id="Servicio8"
                           />
-                          <label class="form-check-label" for="Servicio5">
+                          <label class="form-check-label" for="Servicio8">
                             Otros
                           </label>
                         </div>
@@ -1082,7 +1063,7 @@
               <li><a href="./diseño-grafico.html">Identidad visual</a></li>
               <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
-              <li><a href="./shopify">Shop express </a></li>
+              <li><a href="https://sofiamagnetica.myshopify.com/">Shop express </a></li>
               <li><a href="#contacto">Asesorías</a></li>
             </ul>
           </div>
