--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <div class="info">
                   <p>
                     Especial para creadores de contenido. Ya es hora de impactar
-                    en tus redes sociales. <br /><br />
+                    en tus redes sociales.
                   </p>
                   <a
                     href="./redes-sociales.html"
@@ -414,7 +414,9 @@
                 <h3 class="pe-4">Identidad visual</h3>
                 <p>
                   El diseño que tu marca necesita para reflejar lo que te hace
-                  único. <br /><br /><br />
+                  único.
+                  <br>
+                  <br>
                 </p>
                 <a href="./diseño-grafico.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -451,7 +453,9 @@
                 <h3 class="pe-4">Redes sociales</h3>
                 <p>
                   Potencia, aumenta tu audiencia y crea una comunidad fiel en
-                  redes. <br /><br /><br /><br />
+                  redes.
+                  <br>
+                  <br>
                 </p>
                 <a href="./redes-sociales.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -468,7 +472,9 @@
                 <h3 class="pe-4">Asesoría y Mentorías</h3>
                 <p>
                   Agenda una reunión con Sofi y define el camino de la
-                  comunicación de tu proyecto.<br /><br />
+                  comunicación de tu proyecto.
+                  <br>
+                  <br>
                 </p>
                 <a
                   href="https://wa.me/5493498444635"
