--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="icon d-flex justify-content-end">
-            <a href=""><i class="bi bi-cart-fill"></i></a>
+            <a href="https://sofiamagnetica.myshopify.com/"
+              ><i class="bi bi-cart-fill"></i
+            ></a>
             <a href=""><i class="bi bi-person-fill"></i></a>
           </div>
           <div
@@ -247,7 +249,12 @@
                 </ul>
               </li>
               <li>
-                <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="https://sofiamagnetica.myshopify.com/"
+                  >SHOP</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
