--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -125,7 +125,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="icon d-flex justify-content-end">
-            <a href=""><i class="bi bi-cart-fill"></i></a>
+            <a href="https://sofiamagnetica.myshopify.com/"><i class="bi bi-cart-fill"></i></a>
             <a href=""><i class="bi bi-person-fill"></i></a>
           </div>
           <div
@@ -187,7 +187,7 @@
                 </ul>
               </li>
               <li>
-                <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                <a class="nav-link" aria-current="page" href="https://sofiamagnetica.myshopify.com/">SHOP</a>
               </li>
               <li class="nav-item dropdown">
                 <a
