banners responsives reducidos

--- a/index.html
+++ b/index.html
@@ -326,7 +326,11 @@
     <!-- End Header -->
     <main id="main">
       <!-- ======= Banner ======= -->
-      <div id="ImaIni-home" class="ima-ini" style="margin-bottom: 0px"></div>
+      <div
+        id="ImaIni-home"
+        class="ima-ini"
+        style="margin-bottom: 0px; height: 100vh !important"
+      ></div>
       <!-- End Banner -->
       <!-- ======= Todo lo que necesitas ======= -->
       <section
