--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="assets/js/jquery-3.5.1.min.js"></script>
 
     <!-- Favicons -->
-    <link href="./assets/img/favicon-grande.png" rel="icon" />
+    <link href="./assets/img/favicon-grande.webp" rel="icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -526,7 +526,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-FrancoMai.png"
+                      src="assets/img/testimonios/Testimonio-FrancoMai.webp"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -541,7 +541,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/TestimonioCarenOrtiz.png"
+                      src="assets/img/testimonios/TestimonioCarenOrtiz.webp"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -556,7 +556,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-Delia.png"
+                      src="assets/img/testimonios/Testimonio-Delia.webp"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -571,7 +571,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-FrancoMai.png"
+                      src="assets/img/testimonios/Testimonio-FrancoMai.webp"
                       class="zoom-imagen"
                       alt=""
                     />
