--- a/sobre-magnetica.html
+++ b/sobre-magnetica.html
@@ -17,7 +17,7 @@
     <script src="assets/js/jquery-3.5.1.min.js"></script>
 
     <!-- Favicons -->
-    <link href="assets/img/favicon-grande.png" rel="icon" />
+    <link href="assets/img/favicon-grande.webp" rel="icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
